# whatifd

./: .gitignore  .pre-commit-config.yaml  AGENT_TELEMENTRY.md  AGENT_TELEMETRY.md  CHANGELOG.md  CLAUDE.md  CLAUDE.md.append.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DESIGN.md  LICENSE  README.md  RELEASING.md  SECURITY.md  pyproject.toml
.claude/skills/whatif-design/: SKILL.md
.claude/skills/whatif-features/: SKILL.md
.claude/skills/whatifd-design/: SKILL.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml  mcp-claude.md  mcp-pytest.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/actions/whatifd-fork/: README.md  action.yml
.github/workflows/: ci.yml  codeql.yml  demo-smoke.yml  example-whatifd-fork.yml.example  pr-review.yml  release.yml  security.yml  sync-action.yml
.mcp/: run_pr_check_claude.sh  run_pytest.sh
docs/: concepts.md  getting-started.md  runner-contract-exec.md  runner-contract.md
docs/compliance/: eu-ai-act-evidence-map.md
docs/integrations/: index.md  skillgen.md
docs/internal/: AUTOPILOT.md  GAPLEDGER.md  PHASE_0_4_ENFORCEMENT_AUDIT.md  autopilot-cycle2-handoff.md  issue-108-tool-spans-design.md  marketplace-publish-runbook.md  show-hn-draft.md
docs/internal/drafts/: UPGRADE_TASK.md  eu-ai-act-evidence-map.md  runner-contract-exec-spec.md  show-hn-draft.md
docs/schema/: v0.1.md
docs/sessions/: 2026-05-04-v0-1-implementation-plan.md  2026-05-05-phase-0-completion.md  2026-05-05-pr-23-review.md  2026-05-05-pr-24-review.md  2026-05-05-pr-26-review.md  2026-05-10-phase-a-schema-v0-2.md  2026-05-10-phase-b-config-score-fn.md  2026-05-10-phase-c-regression-check.md  2026-05-10-phase-d-phoenix-adapter.md  2026-05-10-phase-e1-bootstrap.md  2026-05-10-phase-e2-disclosure-flip.md  2026-05-10-phase-j-design-record.md  2026-05-16-production-hardening-review-decisions.md  2026-05-16-production-hardening-review-findings.md  2026-05-30-langfuse-integration-test.md  2026-06-04-action-modernize-comments-paths.md  2026-06-04-adapter-any-elimination.md  2026-06-04-cli-emit-report-paths.md  2026-06-04-datadog-real-shape-validation.md  2026-06-04-datadog-source-adapter.md  2026-06-04-datadog-verdict-sink.md  2026-06-04-p3-marketplace-scaffold.md  2026-06-04-p4-gitlab-component.md  2026-06-04-py-typed-markers.md  2026-06-04-readme-refresh.md  2026-06-04-release-prep-v0.3.0.md  2026-06-04-runner-loader-cwd-and-example.md  2026-06-13-gap-bridge-phase0-2.md  README.md  telemetry-2026-05-10.md
docs/walkthroughs/: 01-clean-ship.md  02-dont-ship-regression.md  03-dont-ship-failure-rescue-gap.md  04-inconclusive-insufficient-sample.md  05-inconclusive-cache-corruption.md  06-rerun-after-fix.md  07-regression-check.md  README.md
examples/exec_agent_node/: README.md  agent.js
examples/minimal-agent/: README.md  replay.py
examples/minimal_agent/: README.md  replay.py
integrations/gitlab/: README.md
integrations/gitlab/templates/: whatifd-fork.yml
scripts/: collect-transcripts.sh  generate_schema.py  grade-skill-benchmark.sh  run-skill-benchmark.sh  skill-dashboard.sh
src/whatif/: __init__.py  cli.py  cli_pipeline.py  config.py  diff.py  exceptions.py  pipeline.py  runner_loader.py
src/whatif/adapters/: __init__.py  factory.py  protocols.py  stub.py
src/whatif/cache/: __init__.py  _types.py  lock.py  recovery.py  summary.py
src/whatif/contract/: __init__.py
src/whatif/decision/: __init__.py  finding_codes.py  fix_suggestions.py  floor.py  verdict.py
src/whatif/render/: __init__.py  _constants.py  ci_status.py  markdown.py  summary.py
src/whatif/replay/: __init__.py  closure_errors.py  kernel.py  kernel_async.py  pipeline.py  result.py  tool_cache.py
src/whatif/report/: __init__.py  models_v01.py  projection.py
src/whatif/serialization/: __init__.py  canonical.py  decimal.py  determinism.py  encoder.py  graph_walk.py  lock_io.py
src/whatif/skills/: skills.md  skills.md_future_review
src/whatif/types/: __init__.py  cohort.py  policy.py  sensitive.py  statistical.py  verdict.py
src/whatifd/: __init__.py  _dynamic_import.py  cli.py  cli_pipeline.py  config.py  diff.py  exec_runner.py  pipeline.py  runner_loader.py  scorer_loader.py
src/whatifd/adapters/: __init__.py  factory.py  pii.py  protocols.py  stub.py
src/whatifd/cache/: __init__.py  _types.py  lock.py  policy.py  recovery.py  summary.py
src/whatifd/contract/: __init__.py
src/whatifd/decision/: __init__.py  failure_codes.py  finding_codes.py  fix_suggestions.py  floor.py  verdict.py
src/whatifd/render/: __init__.py  _constants.py  ci_status.py  markdown.py  summary.py
src/whatifd/replay/: __init__.py  closure_errors.py  kernel.py  kernel_async.py  pipeline.py  result.py  tool_cache.py
src/whatifd/report/: __init__.py  migrate.py  models_v01.py  projection.py
src/whatifd/serialization/: __init__.py  canonical.py  decimal.py  determinism.py  encoder.py  graph_walk.py  load.py  lock_io.py
src/whatifd/skills/: __init__.py  errors.py  generator.py  loader.py  scaffold.py  schema.py  skill.md  skills.md  writer.py
src/whatifd/statistical/: __init__.py  bootstrap.py  wire_boundary.py
src/whatifd/types/: __init__.py  cohort.py  failure.py  finding.py  manifest.py  policy.py  primitives.py  sensitive.py  statistical.py  verdict.py
tests/: test_contract.py
tests/adapters/: conformance.py  test_conformance_self_test.py  test_stub_conformance.py
tests/integration/: _emit_determinism_artifact.py  _fixtures.py  test_cli_fork_e2e.py  test_cli_pipeline_failure_trail.py  test_determinism.py  test_exec_determinism.py  test_failure_injection.py  test_gitlab_component.py  test_phase_e2_bootstrap_pipeline.py  test_phase_i_github_action.py  test_pipeline_dont_ship.py  test_pipeline_inconclusive.py  test_pipeline_ship.py  test_real_adapters.py  test_sync_action_workflow.py
tests/skill-benchmarks/: prompts.json
tests/unit/: test_minimal_agent_example.py
tests/unit/whatif/: test_cli.py  test_cli_pipeline.py  test_config.py  test_diff.py  test_proof_token_isolation.py  (+1 more)
tools/: pr_checker.py
(+160 files in other folders)
