[project]
name = "whatif"
version = "0.0.1"
description = "Open experiment runner for LLM behavior changes. Fork production traces, replay with a proposed change, score the diff, emit a PR-ready verdict report."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
authors = [
  { name = "victoralfred" },
]
keywords = ["llm", "evaluation", "observability", "sre", "agents", "regression-testing", "ci"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Testing",
  "Topic :: Software Development :: Quality Assurance",
]

dependencies = [
  "pydantic>=2.6",
  "typer>=0.25.1",
  "httpx>=0.27",
  "anyio>=4.3",
  "pyyaml>=6.0",
  "rich>=15.0.0",
]

[project.optional-dependencies]
langfuse  = ["langfuse>=4.5.1"]
inspect   = ["inspect-ai>=0.3.216"]
anthropic = ["anthropic>=0.97.0"]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "pytest-cov>=5.0",
  "ruff>=0.5",
  "mypy>=1.10",
  "hypothesis>=6.100",
]

[project.scripts]
whatif = "whatif.cli:app"

[project.urls]
Homepage      = "https://github.com/victoralfred/whatif"
Documentation = "https://github.com/victoralfred/whatif/blob/main/DESIGN.md"
Issues        = "https://github.com/victoralfred/whatif/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/whatif"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "N", "RUF"]
ignore = ["E501"]  # line length handled by formatter

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_return_any = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
asyncio_mode = "auto"
