[project]
name = "whatif"
version = "0.0.1"
description = "Open experiment runner for LLM behavior changes. Fork production traces, replay with a proposed change, score the diff, emit a PR-ready verdict report."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
authors = [
  { name = "victoralfred" },
]
keywords = ["llm", "evaluation", "observability", "sre", "agents", "regression-testing", "ci"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Operating System :: POSIX :: Linux",
  "Operating System :: MacOS",
  "Topic :: Software Development :: Testing",
  "Topic :: Software Development :: Quality Assurance",
]

dependencies = [
  "pydantic>=2.6",
  "typer>=0.12",
  "httpx>=0.28.1",
  "anyio>=4.3",
  "pyyaml>=6.0",
  "rich>=15.0.0",
  # psutil is gated to non-Windows platforms: the cache lock module
  # imports it via fcntl-guarded code, and the Windows guard in
  # whatif/cache/lock.py refuses module load before any psutil call.
  # Marking it here makes the platform constraint visible at install
  # time and avoids a useless dependency on Windows.
  "psutil>=6.0; sys_platform != 'win32'",
]

[project.optional-dependencies]
langfuse  = ["langfuse>=4.5.1"]
inspect   = ["inspect-ai>=0.3.216"]
anthropic = ["anthropic>=0.97.0"]
dev = [
  "pytest>=9.0.3",
  "pytest-asyncio>=1.3.0",
  "pytest-cov>=7.1.0",
  # `pytest-recording` (vcrpy-based) drives the recorded-smoke
  # tests in `packages/whatif-langfuse/tests/test_recorded_smoke.py`.
  # CI replays from cassette; local recording uses --record-mode=once.
  "pytest-recording>=0.13",
  # Direct `vcrpy` pin alongside `pytest-recording`: pytest-recording
  # depends on vcrpy transitively, but vcrpy controls the cassette
  # YAML format. Pinning the major directly catches a vcrpy 9.x bump
  # that would silently break committed cassettes (or require a
  # cassette migration). Industry practice for downstream consumers
  # of a serialization-format library: pin the format-defining
  # dependency directly even when it's pulled transitively.
  "vcrpy>=8.0,<9.0",
  "ruff>=0.15.12",
  "mypy>=1.20.2",
  "hypothesis>=6.152.4",
  "pre-commit>=4.4.1",
  "types-psutil>=6.0",
  "types-PyYAML>=6.0",
]

# PEP 735 dependency groups — uv-native; invisible to pip. Used for
# workspace adapter packages that must be installed editably during
# development but MUST NOT appear in the published wheel's
# dependency metadata (pip would try to resolve them on PyPI and
# fail because they aren't published yet). `uv sync --all-extras
# --dev` picks this up alongside the optional-dependencies dev
# extra above; `pip install ".[dev]"` correctly skips it.
[dependency-groups]
workspace = [
  "whatif-langfuse",
  "whatif-inspect-ai",
]

[project.scripts]
whatif = "whatif.cli:app"

[project.urls]
Homepage      = "https://github.com/victoralfred/whatif"
Documentation = "https://github.com/victoralfred/whatif/blob/main/DESIGN.md"
Issues        = "https://github.com/victoralfred/whatif/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/whatif"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "N", "RUF"]
ignore = ["E501"]  # line length handled by formatter

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_return_any = true

[tool.pytest.ini_options]
testpaths = ["tests", "packages"]
# `--import-mode=importlib` avoids module-name collisions across
# packages with identically-named test files (e.g.,
# `packages/whatif-langfuse/tests/test_conformance.py` and
# `packages/whatif-inspect-ai/tests/test_conformance.py`). The
# default `prepend` mode treats both as `tests.test_conformance`
# and raises `ImportPathMismatchError`. importlib mode is the
# modern pytest recommendation for monorepo / multi-package layouts.
addopts = "-ra --strict-markers --import-mode=importlib"
asyncio_mode = "auto"

# Monorepo workspace per industry practice (cf. OpenTelemetry Python,
# pytest plugins). The sibling adapter packages under `packages/`
# have their own pyproject.toml and version, but share this venv
# during development. PyPI publication is per-package.
[tool.uv.workspace]
members = ["packages/whatif-langfuse", "packages/whatif-inspect-ai"]

# Resolve the workspace adapter packages from the in-tree path
# instead of PyPI. With this binding, `uv sync` installs them
# editably alongside `whatif`; the CI test job picks up
# `packages/whatif-*/tests/` cleanly.
[tool.uv.sources]
whatif-langfuse = { workspace = true }
whatif-inspect-ai = { workspace = true }
