[project]
name = "whatifd"
version = "0.2.1"
description = "Open experiment runner for LLM behavior changes. Fork production traces, replay with a proposed change, score the diff, emit a PR-ready verdict report."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
authors = [
  { name = "victoralfred" },
]
keywords = ["llm", "evaluation", "observability", "sre", "agents", "regression-testing", "ci"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Operating System :: POSIX :: Linux",
  "Operating System :: MacOS",
  "Topic :: Software Development :: Testing",
  "Topic :: Software Development :: Quality Assurance",
]

dependencies = [
  "pydantic>=2.6",
  "typer>=0.12",
  "httpx>=0.28.1",
  "anyio>=4.3",
  "pyyaml>=6.0",
  "rich>=15.0.0",
  # psutil is gated to non-Windows platforms: the cache lock module
  # imports it via fcntl-guarded code, and the Windows guard in
  # whatifd/cache/lock.py refuses module load before any psutil call.
  # Marking it here makes the platform constraint visible at install
  # time and avoids a useless dependency on Windows.
  "psutil>=6.0; sys_platform != 'win32'",
]

[project.optional-dependencies]
langfuse  = ["langfuse>=4.5.1"]
inspect   = ["inspect-ai>=0.3.216"]
anthropic = ["anthropic>=0.97.0"]
dev = [
  "pytest>=9.0.3",
  "pytest-asyncio>=1.3.0",
  "pytest-cov>=7.1.0",
  # `pytest-recording` (vcrpy-based) drives the recorded-smoke
  # tests in `packages/whatifd-langfuse/tests/test_recorded_smoke.py`.
  # CI replays from cassette; local recording uses --record-mode=once.
  "pytest-recording>=0.13",
  # Direct `vcrpy` pin alongside `pytest-recording`: pytest-recording
  # depends on vcrpy transitively, but vcrpy controls the cassette
  # YAML format. Pinning the major directly catches a vcrpy 9.x bump
  # that would silently break committed cassettes (or require a
  # cassette migration). Industry practice for downstream consumers
  # of a serialization-format library: pin the format-defining
  # dependency directly even when it's pulled transitively.
  "vcrpy>=8.0,<9.0",
  # Cap `aiohttp` below 3.14: aiohttp 3.14.0 (2026-06) removed
  # `aiohttp.streams.AsyncStreamReaderMixin`, which vcrpy 8's aiohttp
  # stub (`vcr/stubs/aiohttp_stubs.py`) imports at module load — an
  # ImportError at test *setup* for the recorded-smoke tests. aiohttp
  # is transitive (vcrpy/langfuse pull it), so the cap lives with the
  # vcrpy pin. Lift once vcrpy ships an aiohttp-3.14-compatible stub.
  "aiohttp>=3.13,<3.14",
  "ruff>=0.15.12",
  "mypy>=1.20.2",
  "hypothesis>=6.152.4",
  "pre-commit>=4.4.1",
  "types-psutil>=6.0",
  "types-PyYAML>=6.0",
]

# PEP 735 dependency groups — uv-native; invisible to pip. Used for
# workspace adapter packages that must be installed editably during
# development but MUST NOT appear in the published wheel's
# dependency metadata (pip would try to resolve them on PyPI and
# fail because they aren't published yet). `uv sync --all-extras
# --dev` picks this up alongside the optional-dependencies dev
# extra above; `pip install ".[dev]"` correctly skips it.
[dependency-groups]
workspace = [
  "whatifd-langfuse",
  "whatifd-inspect-ai",
  "whatifd-phoenix",
  "whatifd-datadog",
]

[project.scripts]
whatifd = "whatifd.cli:app"

[project.urls]
Homepage      = "https://github.com/victoralfred/whatifd"
Documentation = "https://github.com/victoralfred/whatifd/blob/main/DESIGN.md"
Issues        = "https://github.com/victoralfred/whatifd/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/whatifd"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "N", "RUF"]
ignore = ["E501"]  # line length handled by formatter

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_return_any = true

# Optional adapter packages: type stubs are not exposed (no py.typed
# marker today) so untyped-import errors are expected when mypy runs
# without the workspace install (e.g., the pre-commit isolated env).
# `ignore_missing_imports` here also silences the corresponding
# `unused-ignore` warning when the workspace IS installed and types
# are available — the per-module override is the correct shape for
# "import is fine, just don't try to type-check the foreign code."
[[tool.mypy.overrides]]
module = [
    "whatifd_inspect_ai",
    "whatifd_inspect_ai.*",
    "whatifd_langfuse",
    "whatifd_langfuse.*",
    "whatifd_phoenix",
    "whatifd_phoenix.*",
    "whatifd_datadog",
    "whatifd_datadog.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests", "packages"]
# `--import-mode=importlib` avoids module-name collisions across
# packages with identically-named test files (e.g.,
# `packages/whatifd-langfuse/tests/test_conformance.py` and
# `packages/whatifd-inspect-ai/tests/test_conformance.py`). The
# default `prepend` mode treats both as `tests.test_conformance`
# and raises `ImportPathMismatchError`. importlib mode is the
# modern pytest recommendation for monorepo / multi-package layouts.
addopts = "-ra --strict-markers --import-mode=importlib"
asyncio_mode = "auto"

# Monorepo workspace per industry practice (cf. OpenTelemetry Python,
# pytest plugins). The sibling adapter packages under `packages/`
# have their own pyproject.toml and version, but share this venv
# during development. PyPI publication is per-package.
[tool.uv.workspace]
members = ["packages/whatifd-langfuse", "packages/whatifd-inspect-ai", "packages/whatifd-phoenix", "packages/whatifd-datadog"]

# Resolve the workspace adapter packages from the in-tree path
# instead of PyPI. With this binding, `uv sync` installs them
# editably alongside `whatifd`; the CI test job picks up
# `packages/whatifd-*/tests/` cleanly.
[tool.uv.sources]
whatifd-langfuse = { workspace = true }
whatifd-inspect-ai = { workspace = true }
whatifd-phoenix = { workspace = true }
whatifd-datadog = { workspace = true }
